versioned_docs/version-7.1/client-api/smuggler/content/_what-is-smuggler-java.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Panel from "@site/src/components/Panel";
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

* **Smuggler** is a tool for moving data between databases.  
  Use it to export documents, indexes, and other items from a database as JSON,  
  and to import that data into another database.  

* Smuggler is exposed through the `DocumentStore.smuggler()` method.  

* An export can write to a `.ravendbdump` file or stream directly into another database.  
  An import reads that data back into a database.  

* You can narrow what is transferred by collection, by item type,  
  and by applying a transform script to each document.  

* In this article:
   * [ForDatabase](../../../client-api/smuggler/what-is-smuggler.mdx#fordatabase)
   * [Export](../../../client-api/smuggler/what-is-smuggler.mdx#export)
      * [Export specific collections](../../../client-api/smuggler/what-is-smuggler.mdx#export-specific-collections)
   * [Import](../../../client-api/smuggler/what-is-smuggler.mdx#import)
      * [Import specific collections](../../../client-api/smuggler/what-is-smuggler.mdx#import-specific-collections)
   * [TransformScript](../../../client-api/smuggler/what-is-smuggler.mdx#transformscript)
   * [Syntax](../../../client-api/smuggler/what-is-smuggler.mdx#syntax)
      * [Methods](../../../client-api/smuggler/what-is-smuggler.mdx#methods)
      * [Classes](../../../client-api/smuggler/what-is-smuggler.mdx#classes)

</Admonition>

<Panel heading="ForDatabase">

By default, the smuggler works on the database set in the `DocumentStore.getDatabase()` property.  
To run the smuggler against a different database, switch to it with the `forDatabase` method.  

```java
DatabaseSmuggler northwindSmuggler = store
    .smuggler()
    .forDatabase("Northwind");
```

</Panel>

<Panel heading="Export">

Export writes the selected data to a `.ravendbdump` file, or streams it directly into another database.  
Use `DatabaseSmugglerExportOptions` to choose what to include.  

<a id="example"/>

#### Example: export indexes and documents to a file

```java
// export only Indexes and Documents to a given file
DatabaseSmugglerExportOptions options = new DatabaseSmugglerExportOptions();
options.setOperateOnTypes(EnumSet.of(
    DatabaseItemType.INDEXES,
    DatabaseItemType.DOCUMENTS));

Operation exportOperation = store
    .smuggler()
    .exportAsync(options, "C:\\ravendb-exports\\Northwind.ravendbdump");

exportOperation.waitForCompletion();
```

<br />

<ContentFrame>

### Export specific collections

By default, all collections are exported.  
To export only specific collections, list their names in the `collections` option.  

```java
// Export only the "Orders" and "Categories" collections to a file
DatabaseSmugglerExportOptions options = new DatabaseSmugglerExportOptions();
options.setCollections(Arrays.asList("Orders", "Categories"));

Operation exportOperation = store
    .smuggler()
    .exportAsync(options, "C:\\ravendb-exports\\Northwind.ravendbdump");

exportOperation.waitForCompletion();
```

</ContentFrame>

<br />

See [exportAsync](../../../client-api/smuggler/what-is-smuggler.mdx#methods) and [DatabaseSmugglerExportOptions](../../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerexportoptions) in the [Syntax](../../../client-api/smuggler/what-is-smuggler.mdx#syntax) section.  

</Panel>

<Panel heading="Import">

Import reads data from a `.ravendbdump` file or a stream and writes it into the database.  
Use `DatabaseSmugglerImportOptions` to choose what to include.  

<a id="example-1"/>

#### Example: import documents from a file

```java
// import only Documents from a given file
DatabaseSmugglerImportOptions options = new DatabaseSmugglerImportOptions();
options.setOperateOnTypes(EnumSet.of(DatabaseItemType.DOCUMENTS));

// import the .ravendbdump file that you exported (i.e. in the export example above)
Operation importOperation = store
    .smuggler()
    .importAsync(options, "C:\\ravendb-exports\\Northwind.ravendbdump");

importOperation.waitForCompletion();
```

<br />

<ContentFrame>

### Import specific collections

By default, all collections are imported.  
To import only specific collections, list their names in the `collections` option.  

```java
// Import only the "Orders" and "Categories" collections from the file
DatabaseSmugglerImportOptions options = new DatabaseSmugglerImportOptions();
options.setCollections(Arrays.asList("Orders", "Categories"));

Operation importOperation = store
    .smuggler()
    .importAsync(options, "C:\\ravendb-exports\\Northwind.ravendbdump");

importOperation.waitForCompletion();
```

</ContentFrame>

<br />

See [importAsync](../../../client-api/smuggler/what-is-smuggler.mdx#methods) and [DatabaseSmugglerImportOptions](../../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerimportoptions) in the [Syntax](../../../client-api/smuggler/what-is-smuggler.mdx#syntax) section.  

</Panel>

<Panel heading="TransformScript">

`TransformScript` lets you modify or filter out each document during an export or import, using JavaScript that you provide.  

The JavaScript engine is the same one used for [patching operations](../../../client-api/operations/patching/single-document.mdx), so you have identical syntax and capabilities, plus the ability to filter out a document by throwing a `skip` exception.  

```javascript
var id = this['@metadata']['@id'];
if (id === 'orders/999-A')
    throw 'skip'; // filter-out

this.Freight = 15.3;
```

</Panel>

<Panel heading="Syntax">

## Methods

<ContentFrame>

### Smuggler methods

<Tabs groupId='smuggler-methods'>
<TabItem value="forDatabase" label="forDatabase">

Switches the smuggler to operate on a database other than the document store's default database.

```java
public DatabaseSmuggler forDatabase(String databaseName);
```

<br />

Usage:

```java
DatabaseSmuggler northwindSmuggler = store.smuggler().forDatabase("Northwind");
```

<br />

| Parameter | Type | Description |
|-----------|------|-------------|
| **databaseName** | `String` | The database that the smuggler will operate on. |

| Return value | |
|-----------|-------------|
| `DatabaseSmuggler` | A smuggler instance scoped to the specified database. |

</TabItem>
<TabItem value="exportAsync" label="exportAsync">

Exports the selected data to a file or to another database.

```java
public Operation exportAsync(DatabaseSmugglerExportOptions options, String toFile);

public Operation exportAsync(DatabaseSmugglerExportOptions options, DatabaseSmuggler toDatabase);
```

<br />

Usage:

```java
Operation exportOperation = store.smuggler().exportAsync(options, toFile);
```

<br />

| Parameter | Type | Description |
|-----------|------|-------------|
| **options** | `DatabaseSmugglerExportOptions` | Options used during the export. See [DatabaseSmugglerExportOptions](../../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerexportoptions). |
| **toFile** | `String` | Path to the file where exported data is written. |
| **toDatabase** | `DatabaseSmuggler` | A `DatabaseSmuggler` instance used as the destination. |

| Return value | |
|-----------|-------------|
| `Operation` | An `Operation` instance you can use to wait for completion and subscribe to progress events. |

</TabItem>
<TabItem value="importAsync" label="importAsync">

Imports data from a file or a stream into the database.

```java
public Operation importAsync(DatabaseSmugglerImportOptions options, String fromFile);

public Operation importAsync(DatabaseSmugglerImportOptions options, InputStream stream);
```

<br />

Usage:

```java
Operation importOperation = store.smuggler().importAsync(options, fromFile);
```

<br />

| Parameter | Type | Description |
|-----------|------|-------------|
| **options** | `DatabaseSmugglerImportOptions` | Options used during the import. See [DatabaseSmugglerImportOptions](../../../client-api/smuggler/what-is-smuggler.mdx#databasesmugglerimportoptions). |
| **fromFile** | `String` | Path to the file the data is imported from. |
| **stream** | `InputStream` | Stream with the data to import. |

| Return value | |
|-----------|-------------|
| `Operation` | An `Operation` instance you can use to wait for completion and subscribe to progress events. |

</TabItem>
</Tabs>

</ContentFrame>

## Classes

<ContentFrame>

### Smuggler options classes

<a id="databasesmugglerexportoptions"/>
<a id="databasesmugglerimportoptions"/>

<Tabs groupId='smuggler-options-classes'>
<TabItem value="DatabaseSmugglerExportOptions" label="DatabaseSmugglerExportOptions">

**Options that control what an export includes.**

```java
class DatabaseSmugglerExportOptions
{
    EnumSet<DatabaseItemType> operateOnTypes
    EnumSet<DatabaseRecordItemType> operateOnDatabaseRecordType
    boolean includeExpired
    boolean includeArtificial
    boolean includeArchived
    boolean removeAnalyzers
    String transformScript
    int maxStepsForTransformScript
    boolean skipRevisionCreation
    String encryptionKey
    List<String> collections
    boolean skipCorruptedData
    ExportCompressionAlgorithm compressionAlgorithm
}
```

<br />

| Property | Type | Description |
|-----------|------|-------------|
| **collections** | `List<String>` | List of specific collections to export. If empty, all collections are exported. <br/> Default: `empty` |
| **operateOnTypes** | `EnumSet<DatabaseItemType>` | Indicates what should be exported. <br/> Default: `INDEXES`, `DOCUMENTS`, `REVISION_DOCUMENTS`, `CONFLICTS`, `DATABASE_RECORD`, `REPLICATION_HUB_CERTIFICATES`, `IDENTITIES`, `COMPARE_EXCHANGE`, `ATTACHMENTS`, `COUNTER_GROUPS`, `SUBSCRIPTIONS`, `TIME_SERIES` |
| **operateOnDatabaseRecordType** | `EnumSet<DatabaseRecordItemType>` | Indicates what should be exported from the database record. <br/> Default: `CLIENT`, `CONFLICT_SOLVER_CONFIG`, `EXPIRATION`, `EXTERNAL_REPLICATIONS`, `PERIODIC_BACKUPS`, `RAVEN_CONNECTION_STRINGS`, `RAVEN_ETLS`, `REVISIONS`, `SETTINGS`, `SQL_CONNECTION_STRINGS`, `SORTERS`, `SQL_ETLS`, `HUB_PULL_REPLICATIONS`, `SINK_PULL_REPLICATIONS`, `TIME_SERIES`, `DOCUMENTS_COMPRESSION`, `ANALYZERS`, `LOCK_MODE`, `OLAP_CONNECTION_STRINGS`, `OLAP_ETLS`, `ELASTIC_SEARCH_CONNECTION_STRINGS`, `ELASTIC_SEARCH_ETLS`, `POSTGRE_SQL_INTEGRATION`, `QUEUE_CONNECTION_STRINGS`, `QUEUE_ETLS`, `INDEXES_HISTORY`, `REFRESH`, `QUEUE_SINKS`, `DATA_ARCHIVAL` |
| **includeExpired** | `boolean` | Should expired documents be exported. <br/> Default: `true` |
| **includeArtificial** | `boolean` | Should artificial documents be exported. <br/> Default: `false` |
| **includeArchived** | `boolean` | Should archived documents be exported. <br/> Default: `true` |
| **removeAnalyzers** | `boolean` | Should analyzers be removed from indexes. <br/> Default: `false` |
| **transformScript** | `String` | JavaScript applied to every exported document. See [TransformScript](../../../client-api/smuggler/what-is-smuggler.mdx#transformscript). |
| **maxStepsForTransformScript** | `int` | Maximum number of steps the transform script can run before failing. <br/> Default: `10000` |
| **skipRevisionCreation** | `boolean` | When `true`, revisions are not created for the processed documents. <br/> Default: `false` |
| **encryptionKey** | `String` | Encryption key used to encrypt the exported file. <br/> Default: `null` |
| **skipCorruptedData** | `boolean` | When `true`, the export continues if corrupted data is encountered (for example, lost compression dictionaries), recording an error entry in the result report instead of stopping. <br/> Default: `false` |
| **compressionAlgorithm** | `ExportCompressionAlgorithm` | Compression algorithm used for the exported file: `Zstd` or `Gzip`. <br/> Default: `null` |

</TabItem>
<TabItem value="DatabaseSmugglerImportOptions" label="DatabaseSmugglerImportOptions">

**Options that control what an import includes.**

```java
class DatabaseSmugglerImportOptions
{
    EnumSet<DatabaseItemType> operateOnTypes
    EnumSet<DatabaseRecordItemType> operateOnDatabaseRecordType
    boolean includeExpired
    boolean includeArtificial
    boolean includeArchived
    boolean removeAnalyzers
    String transformScript
    int maxStepsForTransformScript
    boolean skipRevisionCreation
    String encryptionKey
    List<String> collections
    boolean skipCorruptedData
}
```

<br />

| Property | Type | Description |
|-----------|------|-------------|
| **collections** | `List<String>` | List of specific collections to import. If empty, all collections are imported. <br/> Default: `empty` |
| **operateOnTypes** | `EnumSet<DatabaseItemType>` | Indicates what should be imported. <br/> Default: `INDEXES`, `DOCUMENTS`, `REVISION_DOCUMENTS`, `CONFLICTS`, `DATABASE_RECORD`, `REPLICATION_HUB_CERTIFICATES`, `IDENTITIES`, `COMPARE_EXCHANGE`, `ATTACHMENTS`, `COUNTER_GROUPS`, `SUBSCRIPTIONS`, `TIME_SERIES` |
| **operateOnDatabaseRecordType** | `EnumSet<DatabaseRecordItemType>` | Indicates what should be imported into the database record. <br/> Default: `CLIENT`, `CONFLICT_SOLVER_CONFIG`, `EXPIRATION`, `EXTERNAL_REPLICATIONS`, `PERIODIC_BACKUPS`, `RAVEN_CONNECTION_STRINGS`, `RAVEN_ETLS`, `REVISIONS`, `SETTINGS`, `SQL_CONNECTION_STRINGS`, `SORTERS`, `SQL_ETLS`, `HUB_PULL_REPLICATIONS`, `SINK_PULL_REPLICATIONS`, `TIME_SERIES`, `DOCUMENTS_COMPRESSION`, `ANALYZERS`, `LOCK_MODE`, `OLAP_CONNECTION_STRINGS`, `OLAP_ETLS`, `ELASTIC_SEARCH_CONNECTION_STRINGS`, `ELASTIC_SEARCH_ETLS`, `POSTGRE_SQL_INTEGRATION`, `QUEUE_CONNECTION_STRINGS`, `QUEUE_ETLS`, `INDEXES_HISTORY`, `REFRESH`, `QUEUE_SINKS`, `DATA_ARCHIVAL` |
| **includeExpired** | `boolean` | Should expired documents be imported. <br/> Default: `true` |
| **includeArtificial** | `boolean` | Should artificial documents be imported. <br/> Default: `false` |
| **includeArchived** | `boolean` | Should archived documents be imported. <br/> Default: `true` |
| **removeAnalyzers** | `boolean` | Should analyzers be removed from indexes. <br/> Default: `false` |
| **transformScript** | `String` | JavaScript applied to every imported document. See [TransformScript](../../../client-api/smuggler/what-is-smuggler.mdx#transformscript). |
| **maxStepsForTransformScript** | `int` | Maximum number of steps the transform script can run before failing. <br/> Default: `10000` |
| **skipRevisionCreation** | `boolean` | When `true`, revisions are not created for the imported documents. <br/> Default: `false` |
| **encryptionKey** | `String` | Encryption key used to read an encrypted `.ravendbdump` file. <br/> Default: `null` |
| **skipCorruptedData** | `boolean` | When `true`, the import continues if corrupted data is encountered, recording an error entry in the result report instead of stopping. <br/> Default: `false` |

</TabItem>
</Tabs>

</ContentFrame>

</Panel>
